<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="FRAMEMATES"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:layout_height="match_parent"
                    android:src="@drawable/phone_icon" />

                <EditText
                    android:paddingStart="10dp"
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_hint"
                    android:textSize="18sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="12"/>
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon"
                    android:layout_height="match_parent"
                    android:src="@drawable/password_icon" />

                <EditText
                    android:maxLength="20"
                    android:paddingStart="10dp"
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="18sp" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/tvForgotPass"-->
        <!--            style="@style/viewParent"-->
        <!--            android:layout_gravity="end"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:onClick="viewForgotPassword"-->
        <!--            android:text="Forgot Password?"-->
        <!--            android:textColor="@color/primaryTextColor"-->
        <!--            android:textSize="@dimen/newsMoreTextSize" />-->

        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textSize="20sp"
            android:text="Login" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.cardview.widget.CardView>